--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
+    "web-vitals": "^1.1.2",
+    "axios": "^0.24.0"
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/react-dom": "^17.0.11",
+    "@types/react": "^17.0.35"
   },
   "scripts": {
     "start": "react-scripts start",
